# pathguard

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  system-architecture.md  system-requirements.md  threat-model.md
src/pathguard/: api.py  cli.py  config.py
src/pathguard/api/: routes.py
src/pathguard/collector/: __init__.py  aws.py
tests/: test_imports.py
